--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-generator": "^4.2.0"
+    "express-generator": "^4.2.0",
+    "sqlite3": "^5.1.6"
   }
 }
