--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-generator": "^4.2.0",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
   }
 }
